--- a/.github/ISSUE_TEMPLATE/my_template.yml
+++ b/.github/ISSUE_TEMPLATE/my_template.yml
@@ -1,3 +1,7 @@
+name: Test Form
+description: Test Form with an Action to Parse Issue
+title: Test Form
+labels: [ "test" ]
 body:
   - type: input
     id: favorite_dish
