--- a/.github/ISSUE_TEMPLATE/my_template.yml
+++ b/.github/ISSUE_TEMPLATE/my_template.yml
@@ -18,3 +18,11 @@ body:
         - label: Red
         - label: Green
         - label: Blue
+
+  - type: dropdown
+    id: selected_var
+    attributes:
+      label: What variable do you want to lookup
+      options: 
+        - Foo
+        - Lorem
