--- a/.github/workflows/issue_created.yml
+++ b/.github/workflows/issue_created.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           echo "Outputs: ${{ toJson(steps.issue-parser.outputs) }}"
           
-      - run: echo $FAV_DISH
+      - run: |
+          echo "VAR: $VAR, VALUE: $VAR_VALUE"
         env:
           FAV_DISH: ${{ steps.issue-parser.outputs.issueparser_favorite_dish }}
+          VAR: ${{ steps.issue-parser.outputs.issueparser_selected_var }}
+          VAR_VALUE: ${{ vars[steps.issue-parser.outputs.issueparser_selected_var] }}
+
